--- a/aboly.html
+++ b/aboly.html
@@ -580,7 +580,7 @@ img.characterimg {
 <a id="xiao4"></a><span class="lyterm">孝</span>：子女敬爱、尽心尽力侍奉父母。<span class="lyseealso"><span>【参】</span><span>西汉贾谊《新书&middot;道术》：<span class="lyq">子爱利亲谓之孝，反孝为孽。</span>（爱利：爱之利之。）对应地，父母关爱子女称为<span class="lykeyword"><a href="#ci2">慈</a></span>。《<a href="#xiaojing">孝经</a>&middot;开宗明义》：<span class="lyq">夫孝，<a href="#de2">德</a>之本也，教之所由生也。</span></span></span>
 </p>
 <p>
-<a id="ti4"></a><span class="lyterm">弟</span>：通&ldquo;悌&rdquo;（<span class="lypinyin">t&igrave;</span>），弟弟敬爱哥哥。对应地，哥哥爱护弟弟称为<span class="lykeyword">友</span>。<span class="lyexample"><span>【例】</span><span><a href="#2.21" class="lyref">2.21</a> <span class="lyq">孝乎惟孝，友于兄弟，施于有政。</span></span></span>
+<a id="ti4"></a><span class="lyterm">弟</span>：通&ldquo;悌&rdquo;（<span class="lypinyin">t&igrave;</span>），弟弟敬爱哥哥。对应地，哥哥爱护弟弟称为<span class="lykeyword">友</span>。<span class="lyexample"><span>【例】</span><span><a href="#2.21" class="lyref">2.21</a> <span class="lyq">孝乎惟孝，友于兄弟，施于有政。</span></span></span><span class="lyseealso"><span>【参】</span><span>清代李塨（<span class="lypinyin">gōng</span>）《大学传注》：<span class="lyq">家之所以孝亲、弟兄、慈幼，即国之所以事君事长。</span></span></span>
 </p>
 <p>
 <span class="lyterm"><a href="#hao4">好</a></span>（<span class="lypinyin">h&agrave;o</span>）：动词，喜欢，偏爱。</p>
@@ -765,7 +765,7 @@ img.characterimg {
 </li>
 <li>
 <p>
-<a href="#xiachao">夏</a>、<a href="#shangchao">商</a>、<a href="#zhouchao">周</a>是最初的3个封建王朝，最高统治者都称为<span class="lykeyword">王</span>。<a id="tianzi"></a>为了体现受命于<a href="#shangdi">天</a>、万人之上的地位，又称为<span class="lykeyword">天子</span>，这个便利的称号一直沿用到清朝。<span class="lyseealso"><span>【参】</span><span>天子原称元子，即长子。<a id="yuan2"></a>元：首。《<a href="#shangshu">尚书</a>&middot;周书&middot;召诰》：<span class="lyq"><a href="#shangdi">皇天上帝</a>，改厥元子<a href="#zi1">兹</a>大国<a href="#shangchao">殷</a>之命。</span>（<a id="jue2"></a>厥（<span class="lypinyin">ju&eacute;</span>）：其。）郑玄注：<span class="lyq">言首子者，凡人皆天之子，天子为之首耳。</span>《尚书&middot;周书&middot;洪范》：<span class="lyq">天子作民父母，以为<a href="#tianxia">天下</a>王。</span>天下一家，长兄如父，故可以代天行命。另一方面，<a href="#tianshitianting">天视天听</a>来自万民，<span class="lyq">天<a href="#jin1a">矜</a>于民，民之所欲，天必从之</span>（《尚书&middot;周书&middot;泰誓上》（伪）），天意改变则有<a href="#geming">革命</a>，形成循环制约。</span></span>
+<a href="#xiachao">夏</a>、<a href="#shangchao">商</a>、<a href="#zhouchao">周</a>是最初的3个封建王朝，最高统治者都称为<span class="lykeyword">王</span>。<a id="tianzi"></a>为了体现受命于<a href="#shangdi">天</a>、万人之上的地位，又称为<span class="lykeyword">天子</span>，这个便利的称号一直沿用到清朝。<span class="lyseealso"><span>【参】</span><span>天子原称元子，即长子。<a id="yuan2"></a>元：首。《<a href="#shangshu">尚书</a>&middot;周书&middot;召诰》：<span class="lyq"><a href="#shangdi">皇天上帝</a>，改厥元子<a href="#zi1">兹</a>大国<a href="#shangchao">殷</a>之命。</span>（<a id="jue2"></a>厥（<span class="lypinyin">ju&eacute;</span>）：其。）郑玄注：<span class="lyq">言首子者，凡人皆天之子，天子为之首耳。</span>《尚书&middot;周书&middot;洪范》：<span class="lyq">天子作民父母，以为<a href="#tianxia">天下</a>王。</span>天下一家，长兄如父，故可以代天行命。另一方面，<a href="#tianshitianting">天视天听</a>来自万民，<span class="lyq">天<a href="#jin1a">矜</a>于民，民之所欲，天必从之</span>（《尚书&middot;周书&middot;泰誓上》（伪）），天意改变则有<a href="#geming">革命</a>，形成相互制约。</span></span>
 </p>
 <p>
 <a id="zhuhou"></a><span class="lykeyword">诸侯</span>拥有基本自治的<span class="lykeyword">封国</span>，定期向天子朝贡，在发生战争等大事时，听从天子的统一调遣。诸侯中的领袖称为<span class="lykeyword">伯</span>或<span class="lykeyword"><a href="#badao">霸</a></span>，地位仅次于天子。</p>
@@ -870,7 +870,7 @@ img.characterimg {
 <a id="xianxianyise"></a><span class="lyterm">贤贤易色</span>：重贤轻色。第一个<span class="lyterm">贤</span>是动词，以&hellip;&hellip;为贤，尊崇，重视，value，honor；第二个是名词，德行才能，virtue。<span class="lyexample"><span>【例】</span><span>《史记&middot;梁孝王世家》：<span class="lyq"><a href="#shangchao">殷</a>道尊尊，<a href="#zhouchao">周</a>道<a href="#qinqin">亲亲</a>。</span>《三国志&middot;魏书&middot;武文世王公》裴松之注引魏宗室曹冏（<span class="lypinyin">jiǒng</span>）上书：<span class="lyq">古之王者，必建同<a href="#xingshi">姓</a>以明亲亲，必树异姓以明贤贤。&hellip;&hellip;非贤无与兴功，非亲无与辅治。</span>（建：指分封。）</span></span>
 </p>
 <p>
-<a id="xian2"></a>&ldquo;贤&rdquo;字从贝，本义为财富多，又泛指好。用于比较，表示胜（过），优（于）。用于人，表示才能佳，德行优。东汉许慎的《说文解字》就解释为<span class="lyq">多才也</span>。《三国志&middot;魏书&middot;武帝纪》载，建安十五年（210年）春，曹操颁布《求贤令》，明言天下未定，<span class="lyq">唯才是举</span>，不论出身与品行。在《论语》中，仅凭才能出众，是称不起&ldquo;贤人&rdquo;的，随着儒学主流地位的确立，<a href="#de2">德</a>成为贤的必要部分。《孟子&middot;公孙丑上》推崇<span class="lyq">贤者在位，能者在职</span>；南朝编著的《玉篇》将贤解释为<span class="lyq">有善行也</span>；《宋史&middot;叶梦得传》引叶梦得言：<span class="lyq">贤者，有德之称；能者，有才之称。故<a href="#xianwang">先王</a>常使德胜才，不使才胜德。</span>近代选拔干部，过多注重思想可靠，忽视业务能力，也许是这个古老理念的流弊。中国中央电视台2002年7月的《<a href="http://www.tudou.com/programs/view/WV6V2SNNgLU/" class="lyurl" target="_blank">对话</a>》节目里，陈章良（时任北京大学副校长）与李开复（时任微软公司全球副总裁）作为人才的供需两方，讨论了人才的首选标准、人品应该谁负责等话题，可以作为评价&ldquo;贤&rdquo;的现代版参考。阅读后文时，还可以留意贤与<a href="#ren2">仁</a>的不同。<span class="lyexample"><span>【例】</span><span><a href="#11.16" class="lyref">11.16</a> <span class="lyq">师与商也孰贤？</span><a href="#6.11" class="lyref">6.11</a> <span class="lyq">贤哉回也！</span></span></span>
+<a id="xian2"></a>&ldquo;贤&rdquo;字从贝，本义为财富多，又泛指好。用于比较，表示胜（过），优（于）。用于人，表示才能佳，德行优。东汉许慎的《说文解字》就解释为<span class="lyq">多才也</span>。《三国志&middot;魏书&middot;武帝纪》载，建安十五年（210年）春，曹操颁布《求贤令》，明言天下未定，<span class="lyq">唯才是举</span>，不论出身与品行。在《论语》中，仅凭才能出众，是称不起&ldquo;贤人&rdquo;的，随着儒学主流地位的确立，<a href="#de2">德</a>成为贤的必要部分。《孟子&middot;公孙丑上》推崇<span class="lyq">贤者在位，能者在职</span>；南朝编著的《玉篇》将贤解释为<span class="lyq">有善行也</span>；《宋史&middot;叶梦得传》引叶梦得言：<span class="lyq">贤者，有德之称；能者，有才之称。故<a href="#xianwang">先王</a>常使德胜才，不使才胜德。</span>近代选拔干部，过多注重思想可靠，忽视业务能力，也许是这个古老理念的流弊。中国中央电视台2002年7月的《<a href="http://www.tudou.com/programs/view/WV6V2SNNgLU/" class="lyurl" target="_blank">对话</a>》节目中，陈章良（时任北京大学副校长）与李开复（时任微软公司全球副总裁）作为人才的供需两方，讨论了人才的首选标准、人品应该谁负责等话题，可以作为评价&ldquo;贤&rdquo;的现代版参考。阅读后文时，还可以留意贤与<a href="#ren2">仁</a>的区别。<span class="lyexample"><span>【例】</span><span><a href="#11.16" class="lyref">11.16</a> <span class="lyq">师与商也孰贤？</span><a href="#6.11" class="lyref">6.11</a> <span class="lyq">贤哉回也！</span></span></span>
 </p>
 <p>
 <a id="yi4g"></a><span class="lyterm">易</span>：动词，轻视。<span class="lyexample"><span>【例】</span><span>《史记&middot;高祖本纪》：<span class="lyq">高祖为亭长，素易诸吏。</span></span></span><span class="lyterm">色</span>：美貌。</p>
@@ -883,8 +883,9 @@ img.characterimg {
 </li>
 <li>
 <p>
-<a id="zhi4"></a><span class="lyterm">致</span>：给予，献出，投入，dedicate，devote。<span class="lyexample"><span>【例】</span><span><a href="#19.1" class="lyref">19.1</a> <span class="lyq">士见危致命。</span>常用词&ldquo;致力&rdquo;与&ldquo;注意&rdquo;的构词方式相同。思考：它们后接宾语时，在现代用法中有什么差异？</span></span>
+<a id="zhi4"></a><span class="lyterm">致</span>：给予，献出，投入，dedicate，devote。<span class="lyexample"><span>【例】</span><span><a href="#19.1" class="lyref">19.1</a> <span class="lyq">士见危致命。</span></span></span>
 </p>
+<p>常用词&ldquo;致力&rdquo;与&ldquo;注意&rdquo;的构词方式相同。思考：它们后接宾语时，在现代用法中有什么差异？</p>
 </li>
 <li>
 <p>
@@ -2428,7 +2429,7 @@ img.characterimg {
 <ul class="lyblobitemize">
 <li>
 <p>
-<span class="lyterm">周监（<span class="lypinyin">ji&agrave;n</span>）于二代</span>。<span class="lyterm">监</span>：通&ldquo;鉴&rdquo;，即镜子，这里指借鉴，批判性学习。其甲骨文字形为俯身面向水盆照视。<span class="lyexample"><span>【例】</span><span>《尚书&middot;周书&middot;酒诰》：<span class="lyq">人无于水监，当于民监。</span></span></span>
+<span class="lyterm">周监（<span class="lypinyin">ji&agrave;n</span>）于二代</span>。<a id="jian4d"></a><span class="lyterm">监</span>：通&ldquo;鉴&rdquo;，即镜子，这里指借鉴，批判性学习。其甲骨文字形为俯身面向水盆照视。<span class="lyexample"><span>【例】</span><span>《尚书&middot;周书&middot;酒诰》：<span class="lyq">人无于水监，当于民监。</span></span></span>
 </p>
 <p>
 <span class="lyterm">二代</span>：指<a href="#xiachao">夏朝</a>与<a href="#shangchao">商朝</a>。<span class="lyseealso"><span>【参】</span><span><a href="#sandai">三代</a>治国之道，皆以敬慎戒惧为主，敬畏天命，重视史鉴，例如 <a href="#20.1" class="lyref">20.1</a>  的祭天之词。<a id="yinjian"></a>《诗经&middot;大雅&middot;荡》借<a href="#wen">周文王</a>之口，批评<a href="#zhou">殷纣王</a>不知借鉴夏桀的覆亡：<span class="lyq">殷鉴不远，在<a href="#xiachao">夏后</a>之世。</span>《尚书&middot;周书&middot;召诰》记录了<a href="#shaogong">召公</a>在营建<a href="#luoyi">洛邑</a>时的诰文：<span class="lyq">我不可不监于<a href="#you3">有</a>夏，亦不可不监于有殷。&hellip;&hellip;</span>后面用连续的<span class="lyq">我不敢知曰</span>，反思了夏、商二朝受命于天，又因不敬修其德而<span class="lyq">早坠<a href="#jue2">厥</a>命</span>的教训，动情地希望周朝能够<span class="lyq">上下勤恤</span>（<a id="xu4"></a>恤（<span class="lypinyin">x&ugrave;</span>）：忧患），敬德永命。</span></span>
@@ -3006,7 +3007,7 @@ img.characterimg {
 </li>
 <li>
 <p>
-<span class="lyterm">闻道</span>。<span class="lyterm">闻</span>不仅仅是&ldquo;听见&rdquo;，还要&ldquo;听进去&rdquo;，也就是理解和认同，明白。<span class="lyterm"><a href="#dao4">道</a></span>的所指比较宽泛，古注多从修身和治国两方面阐述，笼统说就是真理，大道。从个人的角度，闻道相当于领悟人生价值。即使来不及圆满实现（夕死），也不是空虚蒙昧的了。现代语境中，这句话还常用于苦苦求解的难题，愿意为之付出很大代价。<span class="lyseealso"><span>【参】</span><span>清代戴望《颜氏学记&middot;卷五》引清儒李塨（<span class="lypinyin">gōng</span>）语：<span class="lyq">&ldquo;闻&rdquo;非偶然顿悟，乃躬行心得之谓。<a href="#9.11">颜子之叹</a>、<a href="#4.15">曾子之&ldquo;唯&rdquo;</a>，庶可当之。方不徒生，亦不虚死，故曰&ldquo;可矣&rdquo;。</span></span></span>
+<span class="lyterm">闻道</span>。<span class="lyterm">闻</span>不仅仅是&ldquo;听见&rdquo;，还要&ldquo;听进去&rdquo;，也就是理解和认同，明白。<span class="lyterm"><a href="#dao4">道</a></span>的所指比较宽泛，古注多从修身和治国两方面阐述，笼统说就是真理，大道。从个人的角度，闻道相当于领悟人生价值。即使来不及圆满实现（夕死），也不是空虚蒙昧的了。现代语境中，这句话还常用于苦苦求解的难题，愿意为之付出很大代价。<span class="lyseealso"><span>【参】</span><span>清代戴望《颜氏学记&middot;卷五》引清儒李塨语：<span class="lyq">&ldquo;闻&rdquo;非偶然顿悟，乃躬行心得之谓。<a href="#9.11">颜子之叹</a>、<a href="#4.15">曾子之&ldquo;唯&rdquo;</a>，庶可当之。方不徒生，亦不虚死，故曰&ldquo;可矣&rdquo;。</span></span></span>
 </p>
 </li>
 </ul>
@@ -5479,7 +5480,7 @@ img.characterimg {
 <div class="lyblobannotation">
 <ul class="lyblobitemize">
 <li>
-<p> 孔子没有直接断言<span class="lyterm">生而知之者</span>存在与否，而只坦言自己并不是，知识修养都要靠积极勤奋的学习探求。他在 <a href="#16.9" class="lyref">16.9</a>  对&ldquo;生而知之者&rdquo;表示过赞赏，也许只是谨慎的虚设，可以和下一章连起来理解。但在 <a href="#9.6" class="lyref">9.6</a>  弟子眼中，他就是天纵之才。<span class="lyseealso"><span>【参】</span><span><a href="#5.28" class="lyref">5.28</a> <a href="#7.28" class="lyref">7.28</a> 。阿尔伯特&middot;爱因斯坦（Albert Einstein，1879&mdash;1955）：<span class="lyqe">It's not that I'm so smart, it's just that I stay with problems longer.</span>思考：&ldquo;生而知之&rdquo;和&ldquo;早慧&rdquo;有什么区别？哪种更罕见？</span></span>
+<p> 孔子没有直接断言<span class="lyterm">生而知之者</span>存在与否，而只坦言自己并不是，知识修养都要靠积极勤奋的学习探求。他在 <a href="#16.9" class="lyref">16.9</a>  对&ldquo;生而知之者&rdquo;表示过赞赏，也许只是谨慎的虚设，可以和下一章连起来理解。但在 <a href="#9.6" class="lyref">9.6</a>  弟子眼中，他就是天纵之才。<span class="lyseealso"><span>【参】</span><span><a href="#5.28" class="lyref">5.28</a> <a href="#7.28" class="lyref">7.28</a> 。阿尔伯特&middot;爱因斯坦（Albert Einstein，1879&mdash;1955）：<span class="lyqe">It's not that I'm so smart, it's just that I stay with problems longer.</span> 思考：&ldquo;生而知之&rdquo;和&ldquo;早慧&rdquo;有什么区别？哪种更罕见？</span></span>
 </p>
 </li>
 </ul>
@@ -7175,7 +7176,7 @@ img.characterimg {
 <ul class="lyblobitemize">
 <li>
 <p>
-<span class="lyterm">秀</span>：（禾类）开花抽穗，这是其本义。因为前面两章都是说颜回，古注有认为<span class="lyterm">苗而不秀</span>是痛惜其早夭的话。成语&ldquo;苗而不秀&rdquo;比喻人有好的天赋却没有取得相应的成就，也可以指人虚有其表。<span class="lyexample"><span>【例】</span><span>王实甫《西厢记》第四本第二折，红娘埋怨张生窝囊：<span class="lyq">你原来&ldquo;苗而不秀&rdquo;，呸！你是个银样镴枪头。</span>（镴（<span class="lypinyin">l&agrave;</span>）：锡铅合金，即焊锡。银样镴枪头：形容中看不中用。）</span></span>
+<span class="lyterm">秀</span>：（禾类）开花抽穗，这是其本义。因为前面两章都是说颜回，古注有认为<span class="lyterm">苗而不秀</span>也是痛惜他早夭的话。成语&ldquo;苗而不秀&rdquo;比喻人有好的天赋却没有取得相应的成就，也可以指人虚有其表。<span class="lyexample"><span>【例】</span><span>王实甫《西厢记》第四本第二折，红娘埋怨张生窝囊：<span class="lyq">你原来&ldquo;苗而不秀&rdquo;，呸！你是个银样镴枪头。</span>（镴（<span class="lypinyin">l&agrave;</span>）：锡铅合金，即焊锡。银样镴枪头：形容中看不中用。）</span></span>
 </p>
 </li>
 <li>
@@ -7267,7 +7268,7 @@ img.characterimg {
 </li>
 </ul>
 <p>
-<span class="lyseealso"><span>【参】</span><span>本章肯定了独立人格的尊严，志向决心的可贵。即使是小人物，<span class="lyq">富贵不能淫，贫贱不能移，威武不能屈，此之谓大丈夫</span>。（《孟子&middot;滕文公下》。<a href="#yin2">淫</a>：侵犯，相当于 <a href="#12.6" class="lyref">12.6</a>  的&ldquo;浸润&rdquo;。）据汪东林《1949年后的梁漱溟》记载，1974年初兴起的&ldquo;批林批孔&rdquo;运动中，哲学家梁漱溟（1893&mdash;1988）拒绝随大流，反对全盘否定孔子，反对<span class="lyq">把学术研究和政治问题搅在一起</span>。他又在学习会上发表长篇讲话，认为孔子是中国历史上影响最大的古人，引起轩然大波，遭到半年多的集中批判。被追问挨批感想时，<span class="lyq">他始而不答，最后却脱口而出：&ldquo;三军可夺帅也，匹夫不可夺<a href="#zhi4g">志</a>！&rdquo;</span>要求他解释，回答说：<span class="lyq">我认为，孔子本身<a href="#7.21">不是宗教</a>，也<a href="#6.17">不要人信仰他</a>，他只是要人<a href="#7.28">相信自己的理性</a>。我只是相信自己的理性，而不轻易去相信别的什么。别的人可能对我有启发，但也还<a href="#12.1">只是启发</a>我的理性。归根结底，我还是按我的理性而言而动。因为一定要我说话，再三问我，我才说了&ldquo;三军可夺帅也，匹夫不可夺志&rdquo;的老话。吐露出来，是受压力的人说的话，不是在得势的人说的话。&ldquo;匹夫&rdquo;就是独人一个，无权无势。他的最后一着只是坚信他自己的&ldquo;志&rdquo;，什么都可以夺掉他，但就是这个&ldquo;志&rdquo;没法夺掉，就是把他这个人消灭掉，也无法夺掉！</span></span></span>
+<span class="lyseealso"><span>【参】</span><span>本章肯定了独立人格的尊严，志向决心的可贵。即使是小人物，<span class="lyq">富贵不能淫，贫贱不能移，威武不能屈，此之谓大丈夫</span>。（《孟子&middot;滕文公下》。<a href="#yin2">淫</a>：侵犯，相当于 <a href="#12.6" class="lyref">12.6</a>  的&ldquo;浸润&rdquo;。）据汪东林《1949年后的梁漱溟》记载，1974年初兴起的&ldquo;批林批孔&rdquo;运动中，哲学家梁漱溟（1893&mdash;1988）拒绝随大流，反对全盘否定孔子，反对<span class="lyq">把学术研究和政治问题搅在一起</span>。他又在学习会上发表长篇讲话，认为孔子是中国历史上影响最大的古人，引起轩然大波，遭到半年多的集中批判。被追问挨批感想时，<span class="lyq">他始而不答，最后却脱口而出：&ldquo;三军可夺帅也，匹夫不可夺<a href="#zhi4g">志</a>！&rdquo;</span>要求他解释，回答是：<span class="lyq">我认为，孔子本身<a href="#7.21">不是宗教</a>，也<a href="#6.17">不要人信仰他</a>，他只是要人<a href="#7.28">相信自己的理性</a>。我只是相信自己的理性，而不轻易去相信别的什么。别的人可能对我有启发，但也还<a href="#12.1">只是启发</a>我的理性。归根结底，我还是按我的理性而言而动。因为一定要我说话，再三问我，我才说了&ldquo;三军可夺帅也，匹夫不可夺志&rdquo;的老话。吐露出来，是受压力的人说的话，不是在得势的人说的话。&ldquo;匹夫&rdquo;就是独人一个，无权无势。他的最后一着只是坚信他自己的&ldquo;志&rdquo;，什么都可以夺掉他，但就是这个&ldquo;志&rdquo;没法夺掉，就是把他这个人消灭掉，也无法夺掉！</span></span></span>
 </p>
 </div>
 </div>
@@ -8257,10 +8258,12 @@ img.characterimg {
 <ul class="lyblobitemize">
 <li>
 <p>
-<span class="lyterm">无所不说</span>是批评颜回过于尊师守礼，对孔子的什么话都高高兴兴地听取，不表示一点疑议。<span class="lyseealso"><span>【参】</span><span><a href="#15.36" class="lyref">15.36</a> </span></span>
-</p>
+<span class="lyterm">无所不说</span>是批评颜回过于尊师守礼，对孔子的什么话都高高兴兴地听取，不表示一点疑议。</p>
 </li>
 </ul>
+</div>
+<div class="lyblobremark">
+<p>政治制度上，孔子很重视礼法的规范化意义，但在和弟子相处时就温和得多。他鼓励 <a href="#15.36" class="lyref">15.36</a> <span class="lyq">当仁，不让于师</span>，所以能够坦率地承认 <a href="#6.2" class="lyref">6.2</a> <span class="lyq">雍之言然</span>，也会开心地赞扬 <a href="#3.8" class="lyref">3.8</a> <span class="lyq">起予者商也！</span>他希望颜回&ldquo;助我&rdquo;，当然是对其水平的肯定了，但是不是也有曾参说的 <a href="#12.24" class="lyref">12.24</a> <span class="lyq">以友辅仁</span>，&ldquo;没大没小&rdquo;地把学生当朋友的感觉呢？有这样的老师，应该就是&ldquo;如坐春风&rdquo;的写照吧。</p>
 </div>
 </div>
 <a id="11.5"></a>
@@ -9544,7 +9547,7 @@ img.characterimg {
 <a href="#zengshen">曾子</a>曰：&ldquo;君子以文会友，以友辅仁。&rdquo;</p>
 </div>
 <div class="lyblobannotation">
-<p>本章可以和前两章连起来理解。<span class="lyseealso"><span>【参】</span><span><a href="#1.1" class="lyref">1.1</a> </span></span>
+<p>本章可以和前两章连起来理解。<span class="lyseealso"><span>【参】</span><span><a href="#1.1" class="lyref">1.1</a> 。李塨《恕谷后集&middot;答长举问》强调了个人努力的重要：<span class="lyq">孔子曰：&ldquo;<a href="#12.1">为仁由己</a>，非以由人。&rdquo;师友特助己者耳，由之者九分，助之者一分也。若专倚师友，则己安在？如人修容、整巾、束带、靧面、盛服，拮据在我，而友其<a href="#jian4d">鉴</a>也，未闻以鉴为巾带、服饰也。</span>（特：仅，只是。靧（<span class="lypinyin">hu&igrave;</span>）：洗脸。拮据（<span class="lypinyin">ji&eacute; jū</span>）：辛勤操办。）</span></span>
 </p>
 </div>
 </div>
@@ -12057,7 +12060,7 @@ img.characterimg {
 </div>
 <div class="lyblobannotation">
 <p>
-<span class="lyseealso"><span>【参】</span><span><a href="#2.15" class="lyref">2.15</a> 。《荀子&middot;劝学》：<span class="lyq">吾尝终日而思矣，不如<a href="#xuyu">须臾</a>之所学也。</span>《礼记&middot;学记》：<span class="lyq">虽有嘉肴，弗食，不知其<a href="#zhi3">旨</a>也。虽有至道，弗学，不知其善也。是故学然后知不足，教然后知困。知不足，然后能自反也。知困，然后能自强也。故曰&ldquo;教学相长&rdquo;也。</span></span></span>
+<span class="lyseealso"><span>【参】</span><span><a href="#2.15" class="lyref">2.15</a> 。《荀子&middot;劝学》：<span class="lyq">吾尝终日而思矣，不如<a href="#xuyu">须臾</a>之所学也。</span>《礼记&middot;学记》：<span class="lyq">虽有嘉肴，弗食，不知其<a href="#zhi3">旨</a>也。虽有至道，弗学，不知其善也。是故学然后知不足，教然后知困。知不足，然后能自反也。知困，然后能自强也。故曰&ldquo;教学相长&rdquo;也。</span>学不仅是读书，也在于实践。《李塨年谱》载，李塨的挚友李毅武自承心骄，李塨认为：<span class="lyq">不力行故也。读书之人，虚见忆想，自谓高人，故易骄。若力行，则此日此身，千疮百孔，欲骄得乎？</span></span></span>
 </p>
 </div>
 </div>
@@ -13313,7 +13316,7 @@ img.characterimg {
 <p>
 <span class="lyterm">有三年之爱于其父母乎？</span>：对父母有三年的爱吗？意思是，应该用居丧三年的礼仪，来表达对父母的爱，就像三岁之前身在父母怀抱中，父母对自己的爱一样。这里把<span class="lyterm">于</span>理解为对，如果理解为从，意即：难道年幼时没有从父母那里得到三年不离于怀的爱护吗，也通。<span class="lyseealso"><span>【参】</span><span>《说苑&middot;修文》：<span class="lyq">子生三年，然后免于父母之怀。故制丧三年，所以报父母之恩也。</span></span></span>
 </p>
-<p>&ldquo;有&hellip;&hellip;于&hellip;&hellip;&rdquo;的结构，既可表示have sth towards sb，give sth to sb，例如 <a href="#16.1" class="lyref">16.1</a> <span class="lyq">季氏将有事于颛臾</span>；又可表示get sth from sb，例如 <a href="#14.36" class="lyref">14.36</a> <span class="lyq">夫子固有惑志于公伯寮</span>。无论如何，这句话的语气都很严厉。</p>
+<p>&ldquo;有&hellip;&hellip;于&hellip;&hellip;&rdquo;的结构，既可表示give sth to sb，impose sth on sb，例如 <a href="#16.1" class="lyref">16.1</a> <span class="lyq">季氏将有事于颛臾</span>；又可表示get sth from sb，例如 <a href="#14.36" class="lyref">14.36</a> <span class="lyq">夫子固有惑志于公伯寮</span>。无论如何，这句话的语气都很严厉。</p>
 </li>
 </ul>
 </div>
@@ -13942,7 +13945,7 @@ img.characterimg {
 </ul>
 </div>
 <div class="lyblobremark">
-<p>小说在中国古代并不受重视，晚清受西方影响，才逐渐得到认可。近年来似乎又矫枉过正，&ldquo;古典小说四大名著&rdquo;常被简称为&ldquo;四大名著&rdquo;，好像古典作品全都以此为尊，反而把传统上视为学术正宗的经史忽视了。</p>
+<p>小说在中国古代并不很受重视，晚清受西方影响，地位才逐渐上升。后来似乎又矫枉过正，&ldquo;古典小说四大名著&rdquo;常被简称为&ldquo;四大名著&rdquo;，好像古典著作全都以此为尊，反而把传统上视为学术正宗的经史忽视了。</p>
 </div>
 </div>
 <a id="19.5"></a>
