--- a/aboly.html
+++ b/aboly.html
@@ -539,7 +539,7 @@ img.characterimg {
 <p>
 <span class="lyterm">人不知而不愠</span>（<span class="lypinyin">y&ugrave;n</span>）。<span class="lyterm">愠</span>：恼怒，怨恨。<span class="lyterm">人</span>：别人，他人，与&ldquo;己&rdquo;相对。<a id="zhi1b"></a><span class="lyterm">知</span>：理解，懂得。用于朋友平辈间，含有知心、投契的意味；用于君臣上下间，含有知遇、赏识的意味。<span class="lyexample"><span>【例】</span><span>《史记&middot;管晏列传》：<span class="lyq">生我者父母，知我者<a href="#baoshuya">鲍子</a>也。</span>《管子&middot;四称》：<span class="lyq">君知则<a href="#shi4a">仕</a>，不知则<a href="#yi3b">已</a>。</span></span></span><span class="lyseealso"><span>【参】</span><span><a href="#1.16" class="lyref">1.16</a> </span></span>
 </p>
-<p>这句话讲全了是：人不知我，而我不愠。文言文中，尤其是较古的篇章，常会省略、变换主语或宾语，需要读者根据上下文自行补全。适应性练习：<a href="#2.9" class="lyref">2.9</a> <a href="#6.5" class="lyref">6.5</a> <a href="#10.3" class="lyref">10.3</a> <a href="#13.1" class="lyref">13.1</a> 。</p>
+<p>这句话讲全了是：人不知我，而我不愠。文言文中，尤其是较古的篇章，常会省略、变换主语或宾语，需要读者根据上下文自行补全。适应性练习：<a href="#2.9" class="lyref">2.9</a> <a href="#6.5" class="lyref">6.5</a> <a href="#10.3" class="lyref">10.3</a> <a href="#13.1" class="lyref">13.1</a> </p>
 </li>
 <li>
 <p>
@@ -572,7 +572,7 @@ img.characterimg {
 <ul class="lyblobitemize">
 <li>
 <p>
-<span class="lyterm">其为人也孝弟（<span class="lypinyin">t&igrave;</span>），而好（<span class="lypinyin">h&agrave;o</span>）犯上者</span>。<span class="lyterm">其</span>：代词，他，他的，这里用作泛指。<span class="lyterm">其&hellip;&hellip;者</span>的句式，相当于英语He who/whose...做主语的用法。<span class="lyexample"><span>【例】</span><span><span class="lyqe">He who knows, does not speak.</span>（<span class="lyq">知者不言。</span>出自《老子》第56章。）</span></span>
+<span class="lyterm">其为人也孝弟（<span class="lypinyin">t&igrave;</span>），而好（<span class="lypinyin">h&agrave;o</span>）犯上者</span>。<span class="lyterm">其</span>：代词，他，他的，这里用作泛指。<span class="lyterm">其&hellip;&hellip;者</span>的句式，相当于英语He who/whose...做主语的用法。<span class="lyexample"><span>【例】</span><span><span class="lyqe">He who knows, does not speak.</span>（<span class="lyq">知者不言。</span>见《老子》第56章。）</span></span>
 </p>
 <p>
 <span class="lyterm">也</span>：语气词，用作句中停顿，相当于轻读的啊、呀、哦。</p>
@@ -587,7 +587,7 @@ img.characterimg {
 </li>
 <li>
 <p>
-<a id="xian3"></a><span class="lyterm">鲜</span>（<span class="lypinyin">xiǎn</span>）：稀少。<span class="lyexample"><span>【例】</span><span>成语&ldquo;鲜为人知&rdquo;。</span></span>
+<a id="xian3"></a><span class="lyterm">鲜</span>（<span class="lypinyin">xiǎn</span>）：稀少，少有。<span class="lyexample"><span>【例】</span><span>成语&ldquo;鲜为人知&rdquo;。</span></span>
 </p>
 </li>
 <li>
@@ -4644,7 +4644,7 @@ img.characterimg {
 <li>
 <p>
 <a id="sidao"></a><span class="lyterm">斯<a href="#dao4">道</a></span>：字面上是这条路，实指孔子崇尚的<a href="#ren2">仁</a><a href="#li3">礼</a>之道。从我们后人学习的角度，也可以把《论语》视作通往斯道之户。</p>
-<p>孔子并没有大声疾呼自己唯一正确。在他看来，&ldquo;由斯道&rdquo;和&ldquo;由户出&rdquo;是同样自然无疑的事。给人的感觉，就像一位以身作则的宽厚长者，<a href="#9.11">在前面</a>殷切热诚地望着你。</p>
+<p>孔子并不大声疾呼自己唯一正确，而是说<a href="#buyi">不亦</a>、何莫。在他看来，&ldquo;由斯道&rdquo;和&ldquo;由户出&rdquo;是同样自然无疑的事。给人的感觉，就像一位以身作则的宽厚长者，<a href="#9.11">在前面</a>热诚地望着你。</p>
 <p>
 <a id="daobuyuanren"></a><span class="lyseealso"><span>【参】</span><span>《中庸》：<span class="lyq">子曰：&ldquo;道不远人。人之为道而远人，不可以为道。&rdquo;</span>《孟子&middot;万章下》：<span class="lyq">夫义，路也；礼，门也。惟君子能由是路，出入是门也。《诗》云：&ldquo;<a href="#dadong">周道如砥</a>，其直如<a href="#shi3">矢</a>。君子所<a href="#lv3">履</a>，小人所视。&rdquo;</span></span></span>
 </p>
@@ -12175,10 +12175,12 @@ img.characterimg {
 <ul class="lyblobitemize">
 <li>
 <p>
-<span class="lyterm">不让</span>：可理解为勇往求仁、无所顾忌，也可理解为坚持原则、不徇私迁就。这是&ldquo;不让&rdquo;的两个典型场景，皆通。成语&ldquo;当仁不让&rdquo;指遇到理所应当的事就主动去做，而不退避谦让。<span class="lyseealso"><span>【参】</span><span>《孝经&middot;谏诤》：<span class="lyq">当不义，则子不可以不争于父，臣不可以不争于君。</span></span></span>
-</p>
+<span class="lyterm">不让</span>：可理解为勇往求仁、无所顾忌，也可理解为坚持原则、不徇私迁就。这是&ldquo;不让&rdquo;的两个典型场景，皆通。成语&ldquo;当仁不让&rdquo;指遇到理所应当的事就主动去做，不躲避退缩，又可以指对荣誉、称号等当之无愧。</p>
 </li>
 </ul>
+<p>
+<span class="lyseealso"><span>【参】</span><span>《孝经&middot;谏诤》：<span class="lyq">当不义，则子不可以不争于父，臣不可以不争于君。</span><a href="https://en.wikiquote.org/wiki/Aristotle#Disputed" class="lyurl" target="_blank">相传</a>古希腊哲人亚里士多德（Aristotle，前384&mdash;前322年）说过：<span class="lyqe">Plato is dear to me, but dearer still is truth.</span>（<span class="lyq">吾爱吾师，吾更爱真理。</span>柏拉图（Plato，约前427&mdash;约前347年）是亚里士多德的老师。本句拉丁原文是：<span class="lyqe">Amicus Plato, sed magis amica veritas.</span><a href="https://en.wikipedia.org/wiki/Amicus_Plato,_sed_magis_amica_veritas" class="lyurl" target="_blank">英文直译</a>是：<span class="lyq">Plato is my friend, but truth is a better friend.</span>）</span></span>
+</p>
 </div>
 </div>
 <a id="15.37"></a>
@@ -15062,7 +15064,7 @@ img.characterimg {
 <a id="references-dictionaries"></a>
 <h2>工具书</h2>
 <p>
-<span class="lybook">《辞源》</span>（修订本），商务印书馆编辑部等编，商务印书馆，1988年。学习古汉语的权威参考，注解扎实，例句常引自最初的用法，有一锤定音的效果。但从检索到印刷，随处可以察觉它的高龄，释义、引文偶有不确。对比朗文、韦氏等英文词典的勤修苦练子孙满堂，可改进的地方实在太多，愿关心<a href="#lunyujishi">国家生命</a>者察焉。2015年底出了&ldquo;有限修订&rdquo;的第3版。</p>
+<span class="lybook">《辞源》</span>（修订本），商务印书馆编辑部等编，商务印书馆，1988年。学习古汉语的权威参考，注解扎实，例句多引自最初的书证，有一锤定音的效果。但从检索到印刷，随处可以察觉它的高龄，释义、引文偶有不确。对比朗文、韦氏等英文词典的勤修苦练子孙满堂，可改进的地方实在太多，愿关心<a href="#lunyujishi">国家生命</a>者察焉。2015年底出了&ldquo;有限修订&rdquo;的第3版。</p>
 <p>
 <span class="lybook">《古代汉语词典》</span>（第2版），张双棣主编，商务印书馆，2014年。主要用它和《辞源》相互印证。常比较不同的词典把哪个义项放在最前面作为本义（第一推动），可以揣摩编撰者进退取舍的思路。</p>
 <p>
@@ -15144,7 +15146,7 @@ img.characterimg {
 <p>
 <span class="lybook">《毛诗正义》</span>，〔汉〕毛亨传，〔汉〕郑玄笺，〔唐〕孔颖达等疏，梁运华整理，山东画报出版社，四库家藏丛书，2004年。</p>
 <p>
-<span class="lybook">《诗集传》</span>，〔南宋〕朱熹注，岳麓书社，古典名著普及文库，1989年。</p>
+<span class="lybook">《诗经》</span>，〔南宋〕朱熹集传，上海古籍出版社，国学典藏丛书，2013年。</p>
 <p>
 <a id="shijingquanzhu"></a><span class="lybook">《诗经全注》</span>，褚斌杰注，人民文学出版社，世界文学名著文库，1999年。</p>
 <p>
