--- a/aboly.html
+++ b/aboly.html
@@ -926,7 +926,7 @@ img.characterimg {
 <span class="lyterm">无友不如己者</span>：不要和（各方面都）不如自己的人交朋友。<span class="lyterm">友</span>是动词。</p>
 <p>
 <span class="lyterm">无</span>：不要。从其含义、词性与用法的演化可以感受汉字的生命力：<br>
-<a id="wu2"></a>本义为没有，不存在。<span class="lyexample"><span>【例】</span><span><a href="#2.22" class="lyref">2.22</a> <span class="lyq">人而无信，不知其可也。</span></span></span> &rarr;<br>不，表示一般性的否定。<span class="lyexample"><span>【例】</span><span><a href="#1.14" class="lyref">1.14</a> <span class="lyq">君子食无求饱，居无求安。</span></span></span> &rarr;<br>不要，表示祈使，后来多用毋（<span class="lypinyin">w&uacute;</span>），勿（<span class="lypinyin">w&ugrave;</span>）。<span class="lyexample"><span>【例】</span><span>《史记&middot;儒林列传》：<span class="lyq">固曰：&ldquo;<a href="#gongsunhong">公孙子</a>，务正学以言，无曲学以阿世！&rdquo;</span>（固：西汉宿儒辕固生。阿（<span class="lypinyin">ē</span>）：迎合。）<a href="#9.25" class="lyref">9.25</a> <span class="lyq">毋友不如己者。</span></span></span> &rarr; <br>
+<a id="wu2"></a>本义为没有，不存在。<span class="lyexample"><span>【例】</span><span><a href="#2.22" class="lyref">2.22</a> <span class="lyq">人而无信，不知其可也。</span></span></span> &rarr;<br>不，表示一般性的否定。<span class="lyexample"><span>【例】</span><span><a href="#1.14" class="lyref">1.14</a> <span class="lyq">君子食无求饱，居无求安。</span></span></span> &rarr;<br>不要，表示祈使，后来多用毋（<span class="lypinyin">w&uacute;</span>），勿（<span class="lypinyin">w&ugrave;</span>）。<span class="lyexample"><span>【例】</span><span>《史记&middot;儒林列传》：<span class="lyq">固曰：&ldquo;<a href="#gongsunhong">公孙子</a>，务正学以言，无曲学以阿世！&rdquo;</span>（固：西汉宿儒辕固生。<a id="e1"></a>阿（<span class="lypinyin">ē</span>）：迎合。）<a href="#9.25" class="lyref">9.25</a> <span class="lyq">毋友不如己者。</span></span></span> &rarr; <br>
 <a id="wu2a"></a>条件连词，无论，不管。<span class="lyexample"><span>【例】</span><span><a href="#20.2" class="lyref">20.2</a> <span class="lyq">君子无众寡，无小大，<a href="#wu2">无</a>敢慢。</span></span></span>
 <br>从本义&ldquo;没有&rdquo;又演变为哲学名词，空虚，虚无。<span class="lyexample"><span>【例】</span><span>《老子》第1章：<span class="lyq">无，名天地之始。有，名万物之母。</span>（按<a href="#laozizhuyi">高亨</a>先生的断句。）</span></span>
 <br>这种灵活性很便于一语双关。如《史记&middot;张释之冯唐列传》中，汉文帝让张释之进言时<span class="lyq"><a href="#bei1">卑</a>之，毋甚高论</span>，意思是切合实际别唱高调，<span class="lyq">令今可施行也</span>。中小学语文课本收入的华罗庚《统筹方法》用作<span class="lyq">卑之无甚高论</span>，意思是说穿了不值一文钱，<span class="lyq">这些道理谁都懂得</span>。</p>
@@ -3540,7 +3540,7 @@ img.characterimg {
 <ul class="lyblobitemize">
 <li>
 <p>
-<a id="ning4"></a><span class="lyterm">佞</span>（<span class="lypinyin">n&igrave;ng</span>）：有口才，能言善辩。后来&ldquo;不佞&rdquo;用于谦称自己，&ldquo;佞人&rdquo;偏指善于花言巧语、阿谀奉承的人。<span class="lyseealso"><span>【参】</span><span>东汉王充《论衡&middot;答佞》：<span class="lyq">诸非皆恶。恶中之逆者，谓之无道；恶中之<a href="#qiao3">巧</a>者，谓之佞人。</span></span></span>
+<a id="ning4"></a><span class="lyterm">佞</span>（<span class="lypinyin">n&igrave;ng</span>）：有口才，能言善辩。&ldquo;佞人&rdquo;是善于花言巧语、阿谀奉承的人，&ldquo;不佞&rdquo;用于谦称自己（这里佞泛指才能）。<span class="lyseealso"><span>【参】</span><span>东汉王充《论衡&middot;答佞》：<span class="lyq">诸非皆恶。恶中之逆者，谓之无道；恶中之<a href="#qiao3">巧</a>者，谓之佞人。</span></span></span>
 </p>
 </li>
 <li>
@@ -4613,11 +4613,12 @@ img.characterimg {
 <li>
 <p>
 <a id="mianyujinzhishi"></a><span class="lyterm">免</span>指免受灾祸。<span class="lyterm">今之世</span>意指乱世，与<a href="#guzhidao">古</a>相对。</p>
-<p>美姿容则多宠，于今之世容易招惹是非，<a href="#15.41">辞不达</a>就难免于祸了。考虑到孔子对于佞、色的一贯态度 <a href="#1.3" class="lyref">1.3</a> <a href="#1.7" class="lyref">1.7</a> ，这句话既有讽刺，也有对世道的感慨。这里采用了David R. Schiller的解释。</p>
+<p>美姿容则多宠，于今之世容易招惹是非，<a href="#15.41">辞不达</a>就难免于祸了。考虑到孔子对于佞、色的一贯态度 <a href="#1.3" class="lyref">1.3</a> <a href="#1.7" class="lyref">1.7</a> ，这句话既有讽刺，也有对世道的感慨，具体所指何事则难以确考。<span class="lyseealso"><span>【参】</span><span>清代毛奇龄《论语稽求篇》：<span class="lyq">以佞比<a href="#e1">阿世</a>，美比善质，直捷明白。盖美而善淫，人未有不思疾害之者。此与怀美质以希世用正同，故曰&ldquo;难免&rdquo;。</span>（希世用：很少为世所用。）</span></span>
+</p>
 </li>
 </ul>
 <p>
-<span class="lyseealso"><span>【参】</span><span>《晋书&middot;孙登传》载，魏文帝曹丕时，孙登隐于深山，无欲无求。嵇康从之三年，<span class="lyq">问其所图，终不答，康每叹息。将别，谓曰：&ldquo;先生竟无言乎？&rdquo;登乃曰：&ldquo;子识火乎？火生而有光，而不用其光，果在于用光；人生而有才，而不用其才，果在于用才。故用光在乎得薪，所以保其耀；用才在乎识真，所以全其年。今子才多识寡，难乎免于今之世矣！子无求乎？&rdquo;康不能用，果遭非命，乃作《幽愤》诗曰：&ldquo;昔惭<a href="#liuxiahui">柳下</a>，今愧孙登。&rdquo;</span>（果：结局，终。求：指选择。）</span></span>
+<span class="lyseealso"><span>【参】</span><span>《左传&middot;桓公十年》说：<span class="lyq">匹夫无罪，怀璧其罪。</span>苏轼《贾谊论》认为：<span class="lyq">非才之难，所以自用者实难。</span>《晋书&middot;孙登传》载，魏文帝曹丕时，孙登隐于深山，无欲无求。嵇康从之三年，<span class="lyq">问其所图，终不答，康每叹息。将别，谓曰：&ldquo;先生竟无言乎？&rdquo;登乃曰：&ldquo;子识火乎？火生而有光，而不用其光，果在于用光；人生而有才，而不用其才，果在于用才。故用光在乎得薪，所以保其耀；用才在乎识真，所以全其年。今子才多识寡，难乎免于今之世矣！子无求乎？&rdquo;康不能用，果遭非命，乃作《幽愤》诗曰：&ldquo;昔惭<a href="#liuxiahui">柳下</a>，今愧孙登。&rdquo;</span>（果：结局，终。求：指选择。）理解了这些历史的经验，才会懂得1964年陈寅恪先生《赠蒋秉南序》中<span class="lyq">默念平生固未尝侮食自矜，曲学阿世</span>的分量。</span></span>
 </p>
 </div>
 </div>
@@ -4644,7 +4645,7 @@ img.characterimg {
 <li>
 <p>
 <a id="sidao"></a><span class="lyterm">斯<a href="#dao4">道</a></span>：字面上是这条路，实指孔子崇尚的<a href="#ren2">仁</a><a href="#li3">礼</a>之道。从我们后人学习的角度，也可以把《论语》视作通往斯道之户。</p>
-<p>孔子并不大声疾呼自己唯一正确，而是说<a href="#buyi">不亦</a>、何莫。在他看来，&ldquo;由斯道&rdquo;和&ldquo;由户出&rdquo;是同样自然无疑的事。给人的感觉，就像一位以身作则的宽厚长者，<a href="#9.11">在前面</a>热诚地望着你。</p>
+<p>孔子并不大声疾呼自己唯一正确，而是说<a href="#buyi">不亦</a>、何莫。在他看来，&ldquo;由斯道&rdquo;和&ldquo;由户出&rdquo;是同样自然无疑的事。给人的感觉，就像一位以身作则的宽厚长者，<a href="#9.11">在前面</a>热诚地望着你。<a href="#17.21" class="lyref">17.21</a>  语气严厉的<span class="lyq">为之！</span>，是和亲近弟子的情况。</p>
 <p>
 <a id="daobuyuanren"></a><span class="lyseealso"><span>【参】</span><span>《中庸》：<span class="lyq">子曰：&ldquo;道不远人。人之为道而远人，不可以为道。&rdquo;</span>《孟子&middot;万章下》：<span class="lyq">夫义，路也；礼，门也。惟君子能由是路，出入是门也。《诗》云：&ldquo;<a href="#dadong">周道如砥</a>，其直如<a href="#shi3">矢</a>。君子所<a href="#lv3">履</a>，小人所视。&rdquo;</span></span></span>
 </p>
