--- a/aboly.html
+++ b/aboly.html
@@ -4613,12 +4613,12 @@ img.characterimg {
 <li>
 <p>
 <a id="mianyujinzhishi"></a><span class="lyterm">免</span>指免受灾祸。<span class="lyterm">今之世</span>意指乱世，与<a href="#guzhidao">古</a>相对。</p>
-<p>美姿容则多宠，于今之世容易招惹是非，<a href="#15.41">辞不达</a>就难免于祸了。考虑到孔子对于佞、色的一贯态度 <a href="#1.3" class="lyref">1.3</a> <a href="#1.7" class="lyref">1.7</a> ，这句话既有讽刺，也有对世道的感慨，具体所指何事则难以确考。<span class="lyseealso"><span>【参】</span><span>清代毛奇龄《论语稽求篇》：<span class="lyq">以佞比<a href="#e1">阿世</a>，美比善质，直捷明白。盖美而善淫，人未有不思疾害之者。此与怀美质以希世用正同，故曰&ldquo;难免&rdquo;。</span>（希世用：很少为世所用。）</span></span>
+<p>美姿容则多宠，于今之世容易招惹是非，<a href="#15.41">辞不达</a>就难免于祸了。考虑到孔子对于佞、色的一贯态度 <a href="#1.3" class="lyref">1.3</a> <a href="#1.7" class="lyref">1.7</a> ，这句话既有讽刺，也有对世道的感慨，具体所指何事则难以确考。<span class="lyseealso"><span>【参】</span><span>清代毛奇龄《论语稽求篇&middot;卷三》引其先兄的话说：<span class="lyq">&ldquo;此寓言也。言无希世之资，而徒抱美质以游于人，鲜有不为世害者。&rdquo;以佞比<a href="#e1">阿</a>世，美比善质，直捷明白。盖美而善淫，人未有不思疾害之者，此与怀美质以希世用正同，故曰&ldquo;难免&rdquo;。<a href="#lunyuzhushu">郉氏</a>疏曰：宋朝美而淫，&ldquo;时世疾之&rdquo;，正此义。</span>（希世用：少有为世所用。）</span></span>
 </p>
 </li>
 </ul>
 <p>
-<span class="lyseealso"><span>【参】</span><span>《左传&middot;桓公十年》说：<span class="lyq">匹夫无罪，怀璧其罪。</span>苏轼《贾谊论》认为：<span class="lyq">非才之难，所以自用者实难。</span>《晋书&middot;孙登传》载，魏文帝曹丕时，孙登隐于深山，无欲无求。嵇康从之三年，<span class="lyq">问其所图，终不答，康每叹息。将别，谓曰：&ldquo;先生竟无言乎？&rdquo;登乃曰：&ldquo;子识火乎？火生而有光，而不用其光，果在于用光；人生而有才，而不用其才，果在于用才。故用光在乎得薪，所以保其耀；用才在乎识真，所以全其年。今子才多识寡，难乎免于今之世矣！子无求乎？&rdquo;康不能用，果遭非命，乃作《幽愤》诗曰：&ldquo;昔惭<a href="#liuxiahui">柳下</a>，今愧孙登。&rdquo;</span>（果：结局，终。求：指选择。）理解了这些历史的经验，才会懂得1964年陈寅恪先生《赠蒋秉南序》中<span class="lyq">默念平生固未尝侮食自矜，曲学阿世</span>的分量。</span></span>
+<span class="lyseealso"><span>【参】</span><span>《左传&middot;桓公十年》说：<span class="lyq">匹夫无罪，怀璧其罪。</span>苏轼《贾谊论》认为：<span class="lyq">非才之难，所以自用者实难。</span>《晋书&middot;孙登传》载，魏文帝曹丕时，孙登隐于深山，无欲无求。嵇康从之三年，<span class="lyq">问其所图，终不答，康每叹息。将别，谓曰：&ldquo;先生竟无言乎？&rdquo;登乃曰：&ldquo;子识火乎？火生而有光，而不用其光，果在于用光；人生而有才，而不用其才，果在于用才。故用光在乎得薪，所以保其耀；用才在乎识真，所以全其年。今子才多识寡，难乎免于今之世矣！子无求乎？&rdquo;康不能用，果遭非命。乃作《幽愤》诗曰：&ldquo;昔惭<a href="#liuxiahui">柳下</a>，今愧孙登。&rdquo;</span>（果：结局，终。求：指选择。）理解了这些历史的经验，才会懂得1964年陈寅恪先生《赠蒋秉南序》中<span class="lyq">默念平生固未尝侮食自矜，曲学阿世</span>的分量。</span></span>
 </p>
 </div>
 </div>
@@ -6092,7 +6092,7 @@ img.characterimg {
 </li>
 <li>
 <p>
-<a id="yousi"></a><span class="lyterm">有司</span>：泛指负责相关职务的下级官员，品级低于<a href="#qingdafushi">士</a>，具体职务需要从上下文判断。<span class="lyterm">司</span>：掌管，负责。<span class="lyexample"><span>【例】</span><span>《史记&middot;廉颇蔺相如列传》：<span class="lyq">召有司案图，指从此以往十五都予赵。</span>思考：&ldquo;有司&rdquo;和现代汉语的&ldquo;有关负责人&rdquo;，在含义和用法上有什么异同？</span></span>
+<a id="yousi"></a><span class="lyterm">有司</span>：专门负责相关职能的下级官员，品级低于<a href="#qingdafushi">士</a>，具体职务要从上下文判断。后来又泛指有关负责人，而不区分位阶。<span class="lyterm">司</span>：掌管，负责。<span class="lyexample"><span>【例】</span><span>《史记&middot;廉颇蔺相如列传》：<span class="lyq">召有司案图，指从此以往十五都予赵。</span>晚明冯时可《雨航杂录》：<span class="lyq">〔将军张元凯〕初为王百谷所拔，其后稍见重有司，即谗媢百谷，《谋野集》中所称&ldquo;中山狼&rdquo;是也。</span>（王百谷：王穉（<span class="lypinyin">zh&igrave;</span>）登，字百谷，晚明文人，《谋野集》是他的著作。媢（<span class="lypinyin">m&agrave;o</span>）：嫉妒。）</span></span>
 </p>
 </li>
 </ul>
